fix: intro wrapper slide text alignment at max-width 480px

--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -152,6 +152,7 @@
 
     .i-title-item {
       font-size: 20px;
+      justify-self: center;
     }
 
     .cv {
